--- a/samples/react-rhythm-of-business-calendar/package.json
+++ b/samples/react-rhythm-of-business-calendar/package.json
@@ -32,6 +32,8 @@
         "compressed-json": "^1.0.16",
         "he": "^1.2.0",
         "hoist-non-react-statics": "^3.3.0",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^2.5.1",
         "lodash": "^4.17.21",
         "moment-timezone": "^0.5.34",
         "office-ui-fabric-react": "7.185.7",
