--- a/samples/react-rhythm-of-business-calendar/package.json
+++ b/samples/react-rhythm-of-business-calendar/package.json
@@ -29,6 +29,7 @@
         "@pnp/logging": "^2.13.0",
         "@pnp/odata": "^2.13.0",
         "@pnp/sp": "^2.13.0",
+        "bootstrap": "^5.3.3",
         "compressed-json": "^1.0.16",
         "he": "^1.2.0",
         "hoist-non-react-statics": "^3.3.0",
