--- a/samples/react-rhythm-of-business-calendar/package.json
+++ b/samples/react-rhythm-of-business-calendar/package.json
@@ -38,9 +38,11 @@
         "lodash": "^4.17.21",
         "moment-timezone": "^0.5.34",
         "office-ui-fabric-react": "7.185.7",
+        "plotly.js": "^2.34.0",
         "react": "~16.13.1",
         "react-beautiful-dnd": "^13.1.1",
         "react-dom": "~16.13.1",
+        "react-plotly.js": "^2.6.0",
         "react-router-dom": "^6.3.0",
         "sanitize-html": "^2.12.1",
         "swiped-events": "^1.1.6"
@@ -62,6 +64,7 @@
         "@types/react": "~16.9.51",
         "@types/react-beautiful-dnd": "^13.1.2",
         "@types/react-dom": "~16.9.8",
+        "@types/react-plotly.js": "^2.6.3",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-test-renderer": "~16.9.5",
         "@types/sanitize-html": "^2.3.2",
