--- a/samples/react-rhythm-of-business-calendar/package.json
+++ b/samples/react-rhythm-of-business-calendar/package.json
@@ -42,6 +42,7 @@
         "react": "~16.13.1",
         "react-beautiful-dnd": "^13.1.1",
         "react-dom": "~16.13.1",
+        "react-icons": "^5.3.0",
         "react-plotly.js": "^2.6.0",
         "react-router-dom": "^6.3.0",
         "sanitize-html": "^2.12.1",
