--- a/samples/react-rhythm-of-business-calendar/src/webparts/rhythmOfBusinessCalendar/RhythmOfBusinessCalendarWebPart.manifest.json
+++ b/samples/react-rhythm-of-business-calendar/src/webparts/rhythmOfBusinessCalendar/RhythmOfBusinessCalendarWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://dev.office.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-    "id": "077f5c4a-37bf-4531-ac24-6369ca0f5f51",
-    "alias": "RhythmOfBusinessCalendarWebPart",
+    "id": "077f5c4a-37bf-4531-ac24-6369ca0f5f53",
+    "alias": "TDC",
     "componentType": "WebPart",
     "version": "*",
     "manifestVersion": 2,
@@ -20,7 +20,7 @@
                 "default": "Other"
             },
             "title": {
-                "default": "Rhythm of Business Calendar"
+                "default": "TDC"
             },
             "description": {
                 "default": "One calendar for managing and maintaining all team and organizational events"
