--- a/samples/react-rhythm-of-business-calendar/package.json
+++ b/samples/react-rhythm-of-business-calendar/package.json
@@ -31,6 +31,7 @@
         "@pnp/sp": "^2.13.0",
         "bootstrap": "^5.3.3",
         "compressed-json": "^1.0.16",
+        "file-saver": "^2.0.5",
         "he": "^1.2.0",
         "hoist-non-react-statics": "^3.3.0",
         "html2canvas": "^1.4.1",
@@ -46,7 +47,8 @@
         "react-plotly.js": "^2.6.0",
         "react-router-dom": "^6.3.0",
         "sanitize-html": "^2.12.1",
-        "swiped-events": "^1.1.6"
+        "swiped-events": "^1.1.6",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@microsoft/eslint-config-spfx": "^1.15.2",
@@ -59,6 +61,7 @@
         "@rushstack/eslint-config": "2.5.1",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
+        "@types/file-saver": "^2.0.7",
         "@types/he": "^1.1.2",
         "@types/hoist-non-react-statics": "^3.3.1",
         "@types/jest": "^26.0.24",
