--- a/samples/react-rhythm-of-business-calendar/package.json
+++ b/samples/react-rhythm-of-business-calendar/package.json
@@ -35,7 +35,9 @@
         "he": "^1.2.0",
         "hoist-non-react-statics": "^3.3.0",
         "html2canvas": "^1.4.1",
+        "jsonpath-plus": "^10.3.0",
         "jspdf": "^2.5.1",
+        "loader-utils": "^3.2.1",
         "lodash": "^4.17.21",
         "moment-timezone": "^0.5.34",
         "office-ui-fabric-react": "7.185.7",
@@ -81,12 +83,12 @@
         "gulp": "^4.0.2",
         "gulp-zip": "^5.1.0",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^26.6.3",
+        "jest": "^30.0.0",
         "json5": "^2.2.2",
         "raf": "^3.4.1",
         "react-test-renderer": "~16.13.1",
         "stateful-process-command-proxy": "^1.0.1",
-        "ts-jest": "^26.5.6"
+        "ts-jest": "^29.4.0"
     },
     "engines": {
         "node": ">=16.15.1"
