--- a/samples/react-rhythm-of-business-calendar/package.json
+++ b/samples/react-rhythm-of-business-calendar/package.json
@@ -35,7 +35,7 @@
         "he": "^1.2.0",
         "hoist-non-react-statics": "^3.3.0",
         "html2canvas": "^1.4.1",
-        "jspdf": "^2.5.1",
+        "jspdf": "^3.0.1",
         "lodash": "^4.17.21",
         "moment-timezone": "^0.5.34",
         "office-ui-fabric-react": "7.185.7",
@@ -48,7 +48,7 @@
         "react-router-dom": "^6.3.0",
         "sanitize-html": "^2.12.1",
         "swiped-events": "^1.1.6",
-        "xlsx": "^0.18.5"
+        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
     },
     "devDependencies": {
         "@microsoft/eslint-config-spfx": "^1.15.2",
